# techne

./: Cargo.toml  README.md
.github/workflows/: test.yml
client/: Cargo.toml
client/src/: connection.rs  http.rs  lib.rs  stdio.rs
examples/: client.rs  server.rs
mcp/: Cargo.toml
mcp/src/: client.rs  lib.rs  server.rs
mcp/src/client/: request.rs  response.rs
mcp/src/server/: capabilities.rs  response.rs  tool.rs
server/: Cargo.toml
server/src/: connection.rs  http.rs  lib.rs  stdio.rs  tool.rs  transport.rs
src/: client.rs  content.rs  error.rs  lib.rs  log.rs  mcp.rs  message.rs  notification.rs  payload.rs  request.rs  response.rs  schema.rs  server.rs  tool.rs
src/client/: connection.rs  http.rs  stdio.rs  transport.rs
src/mcp/: client.rs  schema.rs  server.rs
src/mcp/client/: capabilities.rs  notification.rs  request.rs
src/mcp/server/: content.rs  notification.rs  request.rs  response.rs  tool.rs
src/request/: initialize.rs  tool.rs
src/response/: initialize.rs  tool.rs
src/server/: connection.rs  http.rs  stdio.rs  transport.rs
