[package]
name = "techne"
version = "0.1.0-dev"
edition = "2024"
description = "A simple MCP implementation for Rust"

[features]
default = ["http"]
http = ["dep:hyper", "dep:hyper-util", "hyper-util/server-auto", "dep:http", "dep:http-body-util"]

[dependencies]
log = "0.4"
serde_json = "1"
futures = "0.3"

hyper.version = "1.6"
hyper.optional = true

hyper-util.version = "0.1"
hyper-util.features = ["tokio"]
hyper-util.optional = true

http.version = "1.3"
http.optional = true

http-body-util.version = "0.1"
http-body-util.optional = true

serde.version = "1"
serde.features = ["derive"]

tokio.version = "1"
tokio.features = ["io-util", "net"]

[dev-dependencies]
tokio.version = "1"
tokio.features = ["macros", "rt", "rt-multi-thread"]
