[package]
name = "techne"
description = "A simple MCP implementation for Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["client", "server", "http"]
client = ["dep:techne-client"]
server = ["dep:techne-server"]
http = ["techne-client?/http", "techne-server?/http"]

[dependencies]
techne-mcp.workspace = true

techne-client.workspace = true
techne-client.optional = true

techne-server.workspace = true
techne-server.optional = true

[dev-dependencies]
tracing-subscriber = "0.3"

tokio.version = "1"
tokio.features = ["macros", "rt", "rt-multi-thread"]

[workspace.package]
version = "0.1.0-dev"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hecrj/techne"

[workspace.dependencies]
techne-mcp = { version = "0.1.0-dev", path = "./mcp" }
techne-client = { version = "0.1.0-dev", path = "./client" }
techne-server = { version = "0.1.0-dev", path = "./server" }

bytes = "1.10"
futures = "0.3"
http = "1.3"
http-body-util = "0.1"
hyper = "1.6"
hyper-util = "0.1"
log = "0.4"
reqwest = "0.12"
serde = "1"
serde_json = "1"
sipper = "0.1"
tokio = "1"
